# FileOrganizer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.yaml  main.cpp  organizer  test.cpp
gui/: .gitignore  CMakeLists.txt  config.yaml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  organizer.cpp  organizer.h
gui/icons/: icon.icns
include/: FolderWatcher.h  Logger.h
src/: FolderWatcher.cpp  Logger.cpp  main.cpp
